tests/diag/dym_assign.err
tests/diag/dym_assign.ty:3: error: assignment to unknown variable 'totel'; did you mean 'total'?
     3 |     totel = 2
