tests/diag/dym_assign.ty
fn main():
    total := 1
    totel = 2
    print(str(total))
